--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.16",
-    "@types/node": "^18.15.9"
+    "@types/node": "^18.15.11"
   },
   "dependencies": {
     "axios": "^1.3.0",
@@ -26,5 +26,6 @@
   "bugs": {
     "url": "https://github.com/s131576/2023ProjectFornite/issues"
   },
-  "homepage": "https://github.com/s131576/2023ProjectFornite#readme"
+  "homepage": "https://github.com/s131576/2023ProjectFornite#readme",
+  "keywords": []
 }
