--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.3.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongodb": "^5.0.0"
+    "mongodb": "4.1"
   },
   "repository": {
     "type": "git",
