--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "devDependencies": {
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^18.15.11"
   },
   "dependencies": {
     "axios": "^1.3.0",
+    "bcrypt": "^5.1.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "4.1"
   },
   "repository": {
