--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bouhjar Rachad",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.16",
     "@types/express-session": "^1.17.7",
@@ -17,6 +18,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
