--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.16",
     "@types/express-session": "^1.17.7",
-    "@types/node": "^18.15.11"
+    "@types/node": "^18.15.11",
+    "@types/node-cache": "^4.2.5",
+    "node-cache": "^5.1.2"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -22,7 +24,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "4.1"
+    "mongodb": "4.1",
+    "nodecache": "^0.0.2"
   },
   "repository": {
     "type": "git",
