--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "It project",
   "main": "index.ts",
   "scripts": {
+    "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bouhjar Rachad",
